# GoTravelx

./: .gitignore  README.md  alembic.ini  package.json  pyproject.toml
alembic/versions/: 42a2b2c914ca_init.py
backend/: app.py  crud.py  database.py  deps.py  models.py  schemas.py  security.py
backend/api/: __init__.py  comments.py  histories.py  sessions.py  users.py
frontend/: index.html  package.json
frontend/src/: App.vue  main.ts  router.ts
frontend/src/components/: Footer.vue  Header.vue
frontend/src/views/: Home.vue
store/: app.db
